syntax = "proto3";

package com.road.yishi.proto.active;

message ItemMsg {
  int32 itemId = 1;
  int32 count = 2;
}
